# azure-blob-backup-manager

./: Dockerfile  README.md  config.schema.json  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml  test-lint.yml
src/: main.py
tests/: test_retention.py
